# hyms-plat

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  README.md  docker-compose.yml  index.html  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: ci.yml
_plan/: perguntas-esclarecimento.md  plano-documentacao.md  plano-implementacao.md  plano-testes.md  requisitos.md  status-execucao.md  status-testes.md
_plan/E2E_TESTS/: PLANO.md  STATUS.md
about/: index.html
apps/cms/: __init__.py  models.py
apps/core/: models.py
apps/hymns/: __init__.py  admin.py  apps.py  disambiguation.py  forms.py  models.py  urls.py  views.py  views_social.py
apps/search/: models.py  typesense_client.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py  views_social.py
changelog/: index.html
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
developer-guide/: index.html
roadmap/: index.html
search/: search_index.json
static/js/: social.js
templates/: base.html
templates/account/: login.html  logout.html  password_reset.html  signup.html
templates/hymns/: _audio_player.html  add_comment.html  home.html  hymn_detail.html  hymnbook_detail.html  hymnbook_list.html  search.html  upload_audio.html
templates/users/: followers_list.html  following_list.html  notifications.html  profile.html  profile_edit.html  upload.html  upload_confirm.html  upload_disambiguate.html  upload_preview.html
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_auth.py  test_navigation.py  test_social.py  test_upload.py
tests/fixtures/: test_hymnbook.yaml  test_hymnbook_duplicates.yaml  test_hymnbook_invalid.yaml
tests/unit/: test_disambiguation.py  test_disambiguation_edge_cases.py  test_forms.py  test_hymn_admin.py  test_hymn_models.py  test_hymn_urls.py  test_hymn_views.py  test_hymnbook_version.py  test_import_yaml_command.py  test_phase3_models.py  (+7 more)
user-guide/: index.html
(+52 files in other folders)
